src/edu/cs/ai/log4KR/propositional/probabilisticConditionalLogic/kbParser/antlr4/PCLParser.java
// Generated from PCL.g4 by ANTLR 4.1

	package edu.cs.ai.log4KR.propositional.probabilisticConditionalLogic.kbParser.antlr4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PCLParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__17=1, T__16=2, T__15=3, T__14=4, T__13=5, T__12=6, T__11=7, T__10=8, 
		T__9=9, T__8=10, T__7=11, T__6=12, T__5=13, T__4=14, T__3=15, T__2=16, 
		T__1=17, T__0=18, FRACTIONSYMBOL=19, DECIMALMARK=20, NUMBER=21, ID=22, 
		LINE_COMMENT=23, SKIP_LINES=24;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "')'", "','", "'+'", "'['", "'*'", "'or'", "'not'", 
		"'('", "'='", "';'", "'{'", "'and'", "'conditionals'", "'signature'", 
		"'}'", "'|'", "'!'", "'/'", "'.'", "NUMBER", "ID", "LINE_COMMENT", "SKIP_LINES"
	};
	public static final int
		RULE_init = 0, RULE_signature = 1, RULE_variable = 2, RULE_binaryVar = 3, 
		RULE_multivaluedVar = 4, RULE_varName = 5, RULE_varValue = 6, RULE_conditionals = 7, 
		RULE_conditionalSet = 8, RULE_conditional = 9, RULE_conditionalSetName = 10, 
		RULE_formula = 11, RULE_orexpression = 12, RULE_andexpression = 13, RULE_notexpression = 14, 
		RULE_atom = 15, RULE_not = 16, RULE_and = 17, RULE_or = 18, RULE_probability = 19, 
		RULE_fraction = 20, RULE_floatingpoint = 21;
	public static final String[] ruleNames = {
		"init", "signature", "variable", "binaryVar", "multivaluedVar", "varName", 
		"varValue", "conditionals", "conditionalSet", "conditional", "conditionalSetName", 
		"formula", "orexpression", "andexpression", "notexpression", "atom", "not", 
		"and", "or", "probability", "fraction", "floatingpoint"
	};

	@Override
	public String getGrammarFileName() { return "PCL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public PCLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public ConditionalsContext conditionals() {
			return getRuleContext(ConditionalsContext.class,0);
		}
		public SignatureContext signature() {
			return getRuleContext(SignatureContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44); signature();
			setState(45); conditionals();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignatureContext extends ParserRuleContext {
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public SignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signature; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SignatureContext signature() throws RecognitionException {
		SignatureContext _localctx = new SignatureContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_signature);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47); match(15);
			setState(52); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(48); variable();
				setState(50);
				_la = _input.LA(1);
				if (_la==3) {
					{
					setState(49); match(3);
					}
				}

				}
				}
				setState(54); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public BinaryVarContext binaryVar() {
			return getRuleContext(BinaryVarContext.class,0);
		}
		public MultivaluedVarContext multivaluedVar() {
			return getRuleContext(MultivaluedVarContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variable);
		try {
			setState(58);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56); binaryVar();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57); multivaluedVar();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinaryVarContext extends ParserRuleContext {
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public BinaryVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binaryVar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitBinaryVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BinaryVarContext binaryVar() throws RecognitionException {
		BinaryVarContext _localctx = new BinaryVarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_binaryVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); varName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultivaluedVarContext extends ParserRuleContext {
		public List<VarValueContext> varValue() {
			return getRuleContexts(VarValueContext.class);
		}
		public VarValueContext varValue(int i) {
			return getRuleContext(VarValueContext.class,i);
		}
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public MultivaluedVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multivaluedVar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitMultivaluedVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultivaluedVarContext multivaluedVar() throws RecognitionException {
		MultivaluedVarContext _localctx = new MultivaluedVarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_multivaluedVar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62); varName();
			setState(63); match(12);
			setState(64); varValue();
			setState(65); match(3);
			setState(66); varValue();
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==3) {
				{
				{
				setState(67); match(3);
				setState(68); varValue();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74); match(16);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarNameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PCLParser.ID, 0); }
		public VarNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitVarName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarNameContext varName() throws RecognitionException {
		VarNameContext _localctx = new VarNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarValueContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PCLParser.ID, 0); }
		public VarValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varValue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitVarValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarValueContext varValue() throws RecognitionException {
		VarValueContext _localctx = new VarValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalsContext extends ParserRuleContext {
		public List<ConditionalSetContext> conditionalSet() {
			return getRuleContexts(ConditionalSetContext.class);
		}
		public ConditionalSetContext conditionalSet(int i) {
			return getRuleContext(ConditionalSetContext.class,i);
		}
		public ConditionalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionals; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitConditionals(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionalsContext conditionals() throws RecognitionException {
		ConditionalsContext _localctx = new ConditionalsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_conditionals);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); match(14);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(81); conditionalSet();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalSetContext extends ParserRuleContext {
		public ConditionalSetNameContext conditionalSetName() {
			return getRuleContext(ConditionalSetNameContext.class,0);
		}
		public ConditionalContext conditional(int i) {
			return getRuleContext(ConditionalContext.class,i);
		}
		public List<ConditionalContext> conditional() {
			return getRuleContexts(ConditionalContext.class);
		}
		public ConditionalSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionalSet; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitConditionalSet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionalSetContext conditionalSet() throws RecognitionException {
		ConditionalSetContext _localctx = new ConditionalSetContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_conditionalSet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); conditionalSetName();
			setState(88); match(12);
			setState(89); conditional();
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==3) {
				{
				{
				setState(90); match(3);
				setState(91); conditional();
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97); match(16);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalContext extends ParserRuleContext {
		public ConditionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional; }
	 
		public ConditionalContext() { }
		public void copyFrom(ConditionalContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ConditionalWithProbabilityContext extends ConditionalContext {
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public ProbabilityContext probability() {
			return getRuleContext(ProbabilityContext.class,0);
		}
		public ConditionalWithProbabilityContext(ConditionalContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitConditionalWithProbability(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConditionalWithoutProbabilityContext extends ConditionalContext {
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public ConditionalWithoutProbabilityContext(ConditionalContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitConditionalWithoutProbability(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FormulaWithProbabilityContext extends ConditionalContext {
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public ProbabilityContext probability() {
			return getRuleContext(ProbabilityContext.class,0);
		}
		public FormulaWithProbabilityContext(ConditionalContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitFormulaWithProbability(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FormulaWithoutProbabilityContext extends ConditionalContext {
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public FormulaWithoutProbabilityContext(ConditionalContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitFormulaWithoutProbability(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionalContext conditional() throws RecognitionException {
		ConditionalContext _localctx = new ConditionalContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_conditional);
		try {
			setState(125);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new FormulaWithoutProbabilityContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(99); match(9);
				setState(100); formula();
				setState(101); match(2);
				}
				break;

			case 2:
				_localctx = new FormulaWithProbabilityContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(103); match(9);
				setState(104); formula();
				setState(105); match(2);
				setState(106); match(5);
				setState(107); probability();
				setState(108); match(1);
				}
				break;

			case 3:
				_localctx = new ConditionalWithoutProbabilityContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(110); match(9);
				setState(111); formula();
				setState(112); match(17);
				setState(113); formula();
				setState(114); match(2);
				}
				break;

			case 4:
				_localctx = new ConditionalWithProbabilityContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(116); match(9);
				setState(117); formula();
				setState(118); match(17);
				setState(119); formula();
				setState(120); match(2);
				setState(121); match(5);
				setState(122); probability();
				setState(123); match(1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalSetNameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PCLParser.ID, 0); }
		public ConditionalSetNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionalSetName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitConditionalSetName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionalSetNameContext conditionalSetName() throws RecognitionException {
		ConditionalSetNameContext _localctx = new ConditionalSetNameContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_conditionalSetName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormulaContext extends ParserRuleContext {
		public OrexpressionContext orexpression() {
			return getRuleContext(OrexpressionContext.class,0);
		}
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitFormula(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormulaContext formula() throws RecognitionException {
		FormulaContext _localctx = new FormulaContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_formula);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129); orexpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrexpressionContext extends ParserRuleContext {
		public List<AndexpressionContext> andexpression() {
			return getRuleContexts(AndexpressionContext.class);
		}
		public AndexpressionContext andexpression(int i) {
			return getRuleContext(AndexpressionContext.class,i);
		}
		public OrContext or(int i) {
			return getRuleContext(OrContext.class,i);
		}
		public List<OrContext> or() {
			return getRuleContexts(OrContext.class);
		}
		public OrexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orexpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitOrexpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrexpressionContext orexpression() throws RecognitionException {
		OrexpressionContext _localctx = new OrexpressionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_orexpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131); andexpression();
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 4) | (1L << 7) | (1L << 11))) != 0)) {
				{
				{
				setState(132); or();
				setState(133); andexpression();
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndexpressionContext extends ParserRuleContext {
		public List<NotexpressionContext> notexpression() {
			return getRuleContexts(NotexpressionContext.class);
		}
		public NotexpressionContext notexpression(int i) {
			return getRuleContext(NotexpressionContext.class,i);
		}
		public AndContext and(int i) {
			return getRuleContext(AndContext.class,i);
		}
		public List<AndContext> and() {
			return getRuleContexts(AndContext.class);
		}
		public AndexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andexpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitAndexpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AndexpressionContext andexpression() throws RecognitionException {
		AndexpressionContext _localctx = new AndexpressionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_andexpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140); notexpression();
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 3) | (1L << 6) | (1L << 13))) != 0)) {
				{
				{
				setState(141); and();
				setState(142); notexpression();
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NotexpressionContext extends ParserRuleContext {
		public NotexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notexpression; }
	 
		public NotexpressionContext() { }
		public void copyFrom(NotexpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NotAtomContext extends NotexpressionContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public NotContext not() {
			return getRuleContext(NotContext.class,0);
		}
		public NotAtomContext(NotexpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitNotAtom(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SingleAtomContext extends NotexpressionContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public SingleAtomContext(NotexpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitSingleAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NotexpressionContext notexpression() throws RecognitionException {
		NotexpressionContext _localctx = new NotexpressionContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_notexpression);
		try {
			setState(153);
			switch (_input.LA(1)) {
			case 8:
			case 18:
				_localctx = new NotAtomContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(149); not();
				setState(150); atom();
				}
				break;
			case 9:
			case ID:
				_localctx = new SingleAtomContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(152); atom();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
	 
		public AtomContext() { }
		public void copyFrom(AtomContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FormulaInBracketsContext extends AtomContext {
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public FormulaInBracketsContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitFormulaInBrackets(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtomWithoutAllocContext extends AtomContext {
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public AtomWithoutAllocContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitAtomWithoutAlloc(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtomWithAllocContext extends AtomContext {
		public VarValueContext varValue() {
			return getRuleContext(VarValueContext.class,0);
		}
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public AtomWithAllocContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitAtomWithAlloc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_atom);
		try {
			setState(164);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new AtomWithoutAllocContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(155); varName();
				}
				break;

			case 2:
				_localctx = new AtomWithAllocContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(156); varName();
				setState(157); match(10);
				setState(158); varValue();
				}
				break;

			case 3:
				_localctx = new FormulaInBracketsContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(160); match(9);
				setState(161); formula();
				setState(162); match(2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NotContext extends ParserRuleContext {
		public NotContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_not; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PCLVisitor ) return ((PCLVisitor<? extends T>)visitor).visitNot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NotContext not() throws RecognitionException {
		NotContext _localctx = new NotContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_not);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			_la = _input.LA(1);
			if ( !(_la==8 || _la==18) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
